--- a/i_contact/pubspec.yaml
+++ b/i_contact/pubspec.yaml
@@ -1,19 +1,34 @@
 name: i_contact
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
+  sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6
+  freezed_annotation: ^2.0.0
+  json_annotation: ^4.9.0
+  json_serializable: ^6.0.0
+  shared_preferences: ^2.2.3
+  flutter_form_builder: ^9.3.0
+  form_builder_validators: ^11.0.0
+  dim_loading_dialog: ^0.0.3
+  fluttertoast: ^8.2.6
+  searchable_listview: ^2.15.0
+  get: ^4.6.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.11
+  freezed: ^2.5.2
 
 flutter:
   uses-material-design: true
+  assets:
+    - lib/data/data.json
